# hiqp_demos

./: CMakeLists.txt  README.md  package.xml  plugins.xml
config/: yumi.yaml  yumi_limits_preload.yaml  yumi_preload.yaml
include/hiqp/tasks/: tdef_x_axis.h  tdyn_p_controller.h  tdyn_pd_controller.h
launch/: yumi.rviz  yumi_Gazebo.launch  yumi_online.launch  yumi_simulation.launch
scripts/: dual_frame_tracking.sh  frame_cylinder_alignment.sh  frame_frame_alignment.sh  frame_frame_alignment_tracking.sh  frame_frame_pose.sh  frame_frame_pose_l.sh  frame_frame_tracking.sh  frame_tf_pose.sh  full_pose.sh  full_pose2.sh  joint_configuration.sh  joint_configuration2.sh  joint_position.sh  line_line_alignment.sh  line_sphere_alignment.sh  point_frame_tracking.sh  point_plane_fts_projection.sh  point_plane_projection.sh  point_point_projection.sh  point_point_tracking.sh  reach_to_grasp.sh  sphere_plane_avoidance.sh  test_plugins.sh
scripts/functional_tests/: tdef_full_pose.sh  tdef_geom_align.sh  tdef_jnt_config.sh  tdef_jnt_limits.sh
scripts/functional_tests/TDefGeomAlign/: frame_with_frame_alignment.sh
scripts/functional_tests/TDefGeomProj/: frame_on_frame_projection.sh  line_on_line_projection.sh  point_on_box_projection.sh  point_on_cylinder_projection.sh  point_on_point_projection.sh  sphere_on_plane_projection.sh
scripts/functional_tests/dynamics/: cubic.sh  hypersin.sh  linear.sh  minimaljerk.sh
servicecalls/: clear_controller.sh  joint_configuration.sh  line_line_alignment.sh  point_plane_projection.sh  sphere_plane_avoidance.sh
src/: tdef_x_axis.cpp  tdyn_p_controller.cpp  tdyn_pd_controller.cpp
